# query_consumer

./: .gitlab-ci.yml  Cargo.toml  Dockerfile
.gitlab/ci_templates/: build.yml  dockerize.yml  lint.yml  setup.yml  template.yml
.gitlab/ci_templates/includes/: cache.yml  task-type.yml
.gitlab/merge_request_templates/: Bugfix.md  Feature.md
ci/: docker.sh
src/: consumer.rs  errors.rs  main.rs  t.rs
