[package]
name = "query_consumer"
version = "0.1.0"
edition = "2018"

[dependencies]
rdkafka = { version = "0.36.2", features = ["zstd"] }
chrono = "0.4.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["parking_lot", "rt-multi-thread", "macros", "io-util", "signal"] }
tokio-stream = {version = "0.1.14", features = ["net"]}
log = "0.4.20"
clap = "4.5.1"
polars = { version = "0.37.0", features = ["parquet"] }
simplelog = { version = "0.12.1", features = ["paris"] }
futures-util = "0.3.30"
futures = "0.3.30"
tokio-util = "0.7.10"

[dev-dependencies]
futures = "0.3.30"
