[package]
name = "query_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36.2", features = ["zstd"] }
chrono = "0.4.34"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["parking_lot", "rt-multi-thread", "macros", "io-util", "signal"] }
tokio-stream = {version = "0.1.14", features = ["net"]}
log = "0.4.20"
clap = "4.5.1"
polars = { version = "0.37.0", features = ["parquet"] }
simplelog = { version = "0.12.1", features = ["paris"] }
futures-util = "0.3.30"
futures = "0.3.30"
tokio-util = "0.7.10"
serde_json = { version = "1.0.114", features = ["raw_value"] }
humansize = "2.1.3"

[dev-dependencies]
futures = "0.3.30"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
